--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
- <head>
- </head>
- <body>
- </body>
+	<head>
+	</head>
+	<body>
+		<h1>ola</h1>
+		<h2>mundo</h2>
+		<p>hehehe</p>
+	</body>
 </html>
